update .travis.yml to see all directories and update to correct hugo version

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,17 @@ before_install:
   - npm install -g sass
   - npm install -g stylelint
   # install hugo
-  - wget https://github.com/gohugoio/hugo/releases/download/v0.48/hugo_0.48_Linux-64bit.tar.gz
-  - tar xf hugo_0.48_Linux-64bit.tar.gz hugo
+  - wget https://github.com/gohugoio/hugo/releases/download/v0.55.6/hugo_0.55.6_Linux-64bit.tar.gz
+  - tar xf hugo_0.55.6_Linux-64bit.tar.gz hugo
   # probably don't need this but just to be sure
-  - rm -rf hugo_0.48_Linux-64bit.tar.gz
+  - rm -rf hugo_0.55.6_Linux-64bit.tar.gz
   - ls
   - export PATH="$PWD:$PATH"
   - echo $PATH
 
 script:
+  # see all directories
+  - shopt -s globstar
   # check writing
   - proselint README.md
   - mdl README.md
