--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: Python
+python: 3.6
+
+env:
+  global:
+    - HUGO_VERSION=0.55.6
+
 
 before_install:
   - gem install mdl
@@ -6,21 +12,17 @@ before_install:
   - npm install -g sass
   - npm install -g stylelint
   # install hugo
-  - wget https://github.com/gohugoio/hugo/releases/download/v0.55.6/hugo_0.55.6_Linux-64bit.tar.gz
-  - tar xf hugo_0.55.6_Linux-64bit.tar.gz hugo
+  - wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION_Linux-64bit.tar.gz
+  - tar xf hugo_${HUGO_VERSION}_Linux-64bit.tar.gz hugo
   # probably don't need this but just to be sure
   - rm -rf hugo_0.55.6_Linux-64bit.tar.gz
-  - ls
   - export PATH="$PWD:$PATH"
-  - echo $PATH
 
 script:
   # see all directories
   - shopt -s globstar
   # check writing
   - proselint README.md
-  - mdl README.md
-  # lint
-  - stylelint "**/*.scss, **/*.css, **/*.html, **/*.md"
+  - mdl **/*.md
   # build
   - hugo
