--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ script:
   - shopt -s globstar
   # check writing
   - proselint README.md
-  - mdl *.md content/*.md content/**/*.md
+  - mdl README.md
   # build
   - hugo
