update resume directory and route for resume.pdf

--- a/config.toml
+++ b/config.toml
@@ -34,6 +34,11 @@ publishDir = "dist"
     name = "Projects"
     weight = 3
 
+[[menu.main]]
+    url = "/resume.pdf/"
+    name = "Resume"
+    weight = 4
+
 # Social icons to be shown on the right-hand side of the navigation bar
 # The "name" field should match the name of the icon to be used
 # The list of available icons can be found at http://fontawesome.io/icons/
